# the-space-memory

./: .copier-answers.yml  .gitignore  .mise.toml  .rumdl.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.ja.md  README.md  tsm.toml.example  tsm.toml.sample
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: lint.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: ci.yml  e2e.yml  labeler.yml  lint.yml  metrics.yml  release.yml
commands/: doctor.md  search.md
commands/scripts/: search.sh
decisions/: 0001-process-roles-and-responsibilities.md  0005-embedder-binary-consolidation.md
docs/: command-reference.md  user-dictionary.md
docs/claude-code/: claude-code-prompt-format.md
hooks/: hooks.json
hooks/scripts/: index-file.sh  ingest.sh  search.sh
skills/doctor/: SKILL.md
skills/search/: SKILL.md
skills/setup/: SKILL.md
src/: chunker.rs  classifier.rs  cli.rs  config.rs  daemon.rs  daemon_protocol.rs  db.rs  doc_links.rs  embedder.rs  entity.rs  frontmatter.rs  indexer.rs  ipc.rs  lib.rs  logging.rs  main.rs  searcher.rs  session_chunker.rs  status.rs  synonyms.rs  temporal.rs  tokenizer.rs  user_dict.rs
src/indexer/: mod.rs  walker.rs
tests/: e2e.sh  search-test-patterns.md
tests/e2e/testdata/notes/: botchan.md  gingatetsudo.md  hashire-melos.md  old-text.md  seasonal-text.md
tests/e2e/testdata/sessions/: test-session.jsonl
