[package]
name = "knowledge-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knowledge-search"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "load_extension"] }
lindera = { version = "2.3", features = ["embed-ipadic"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
sqlite-vec = "0.1.8-alpha.1"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
