[package]
name = "the-space-memory"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "tsm"
path = "src/main.rs"

[[bin]]
name = "tsmd"
path = "src/bin/tsmd/main.rs"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "load_extension"] }
lindera = { version = "2.3", features = ["embed-ipadic"] }
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
sqlite-vec = "0.1.9"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "1.1"
regex = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
sha2 = "0.11"
libc = "0.2"
log = "0.4"
flexi_logger = { version = "0.31", features = ["colors"] }
notify-debouncer-mini = "0.7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
